--- a/e2e/Forms/src/HelloWorld.iOS/HelloWorld.iOS.csproj
+++ b/e2e/Forms/src/HelloWorld.iOS/HelloWorld.iOS.csproj
@@ -170,7 +170,7 @@
     <Reference Include="Xamarin.iOS" />
   </ItemGroup>
   <ItemGroup>
-    <PackageReference Include="Xamarin.TestCloud.Agent" Version="0.21.9" />
+    <PackageReference Include="Xamarin.TestCloud.Agent" />
   </ItemGroup>
   <Import Project="$(MSBuildExtensionsPath)\Xamarin\iOS\Xamarin.iOS.CSharp.targets" />
   <ItemGroup>
