--- a/e2e/Forms/tests/HelloWorld.UITests/HelloWorld.UITests.csproj
+++ b/e2e/Forms/tests/HelloWorld.UITests/HelloWorld.UITests.csproj
@@ -4,15 +4,16 @@
   <PropertyGroup>
     <TargetFramework>net461</TargetFramework>
     <NoWarn>NU1201</NoWarn>
+    <OutputPath>$(ArtifactStagingRoot)\UITests</OutputPath>
   </PropertyGroup>
 
   <ItemGroup>
-    <PackageReference Include="NUnit" Version="3.12.0" />
-    <PackageReference Include="NUnit3TestAdapter" Version="3.16.1">
+    <PackageReference Include="NUnit" />
+    <PackageReference Include="NUnit3TestAdapter">
       <PrivateAssets>all</PrivateAssets>
       <IncludeAssets>runtime; build; native; contentfiles; analyzers; buildtransitive</IncludeAssets>
     </PackageReference>
-    <PackageReference Include="Xamarin.UITest" Version="3.0.5" />
+    <PackageReference Include="Xamarin.UITest" />
   </ItemGroup>
 
 </Project>
