--- a/e2e/Uno/HelloUnoWorld.UITests/HelloUnoWorld.UITests.csproj
+++ b/e2e/Uno/HelloUnoWorld.UITests/HelloUnoWorld.UITests.csproj
@@ -6,11 +6,11 @@
   </PropertyGroup>
 
   <ItemGroup>
-    <PackageReference Include="Microsoft.NET.Test.Sdk" Version="16.1.1" />
-    <PackageReference Include="Newtonsoft.Json" Version="12.0.2" />
-    <PackageReference Include="NUnit" Version="3.12.0" />
-    <PackageReference Include="NUnit3TestAdapter" Version="3.15.1" />
-    <PackageReference Include="Uno.UITest.Helpers" Version="1.0.0" />
+    <PackageReference Include="Microsoft.NET.Test.Sdk" />
+    <PackageReference Include="Newtonsoft.Json" />
+    <PackageReference Include="NUnit" />
+    <PackageReference Include="NUnit3TestAdapter" />
+    <PackageReference Include="Uno.UITest.Helpers" />
   </ItemGroup>
 
 </Project>
