--- a/e2e/Wpf/HelloWorld.Bootstraper/HelloWorld.Bootstrapper.csproj
+++ b/e2e/Wpf/HelloWorld.Bootstraper/HelloWorld.Bootstrapper.csproj
@@ -5,17 +5,23 @@
     <TargetFrameworks>netcoreapp3.1;net462</TargetFrameworks>
     <UseWPF>true</UseWPF>
     <RootNamespace>HelloWorld</RootNamespace>
+    <Version Condition=" '$(PRISM_RELEASE)' != '' ">$(PRISM_RELEASE)</Version>
+    <!-- Update this version when incrementing Library Versions i.e. 7.1.0, 7.2.0 -->
+    <VersionPrefix Condition=" '$(PRISM_RELEASE)' == '' ">8.0.0</VersionPrefix>
+    <!-- This will create CI builds as 7.0.0.1234-ci -->
+    <VersionPrefix Condition=" '$(PRISM_RELEASE)' == '' And '$(BUILD_BUILDID)' != '' ">$(VersionPrefix).$(BUILD_BUILDID)</VersionPrefix>
+    <ApplicationIcon>..\HelloWorld\prism-sandbox.ico</ApplicationIcon>
   </PropertyGroup>
 
   <PropertyGroup>
     <DefaultItemExcludes>..\HelloWorld\bin\**;..\HelloWorld\obj\**;..\HelloWorld\App.*</DefaultItemExcludes>
   </PropertyGroup>
-  
+
   <ItemGroup>
     <Page Include="..\HelloWorld\**\*.xaml" LinkBase="%(RecurseDir)" Generator="MSBuild:Compile" Exclude="$(DefaultItemExcludes)" />
     <Compile Include="..\HelloWorld\**\*.cs" LinkBase="%(RecurseDir)" Exclude="$(DefaultItemExcludes)" />
   </ItemGroup>
-  
+
   <ItemGroup>
     <Page Remove="..\HelloWorld\ModuleCatalog.xaml" />
   </ItemGroup>
