--- a/src/Forms/Prism.DryIoc.Forms/Prism.DryIoc.Forms.csproj
+++ b/src/Forms/Prism.DryIoc.Forms/Prism.DryIoc.Forms.csproj
@@ -11,7 +11,7 @@
   </PropertyGroup>
 
   <ItemGroup>
-    <PackageReference Include="DryIoc.dll" Version="4.3.1" />
+    <PackageReference Include="DryIoc.dll" />
   </ItemGroup>
 
   <ItemGroup>
