--- a/tests/Forms/MockApp/MockApp.csproj
+++ b/tests/Forms/MockApp/MockApp.csproj
@@ -5,7 +5,7 @@
   </PropertyGroup>
 
   <ItemGroup>
-    <PackageReference Include="Moq" Version="4.14.5" />
+    <PackageReference Include="Moq" />
   </ItemGroup>
 
   <ItemGroup>
